<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
            android:id="@+id/target_phone_number_list_fragment"
            android:icon="@drawable/ic_phone_forwarded_24dp"
            android:title="@string/target_phone_numbers_menu_item"/>

    <item
            android:id="@+id/timeoff_rule_list_fragment"
            android:icon="@drawable/ic_timer_off_black_24dp"
            android:title="@string/time_offs_menu_item"/>

    <item
            android:id="@+id/blacklist_phone_number_list_fragment"
            android:icon="@drawable/ic_block_24dp"
            android:title="@string/blacklist_numbers_menu_item"/>

    <item
            android:id="@+id/settings_fragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings_menu_item"/>

</menu>
